# pca-engine

./: .gitignore  CLAUDE.md  PHYSICS_APPLICATIONS.md  Readme.md  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
benchmarks/: run_benchmarks.py
src/: __init__.py  pca.py
tests/: conftest.py  test_benchmark.py  test_correctness.py  test_integration.py  test_pca.py  test_physics.py
